--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,13 @@
-* {
+html {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -37,65 +43,6 @@ header {
   margin-left: 10px;
 }
 
-/* Navigation style: */
-/* 
-nav ul {
-  display: flex;
-  list-style-type: none;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #f9f9f9;
-}
-
-nav li {
-  float: left;
-  width: 15vh;
-}
-
-nav li a,
-.dropbtn {
-  display: inline-block;
-  color: #090909;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  width: 15vh;
-}
-
-nav li a:hover,
-.dropdown:hover .dropbtn {
-  background: #f1f1f1;
-}
-
-nav li.dropdown {
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  width: 15vh;
-}
-
-.dropdown-content a {
-  color: 090909;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-}
-
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-} */
-
 /* Main div style: */
 
 main {
@@ -108,7 +55,7 @@ main {
   align-items: center;
 }
 
-.jump-in h1, .jump-in p {
+.jump-in {
   opacity: 0;
   transform: translateY(50px);
   animation: jumpIn 1s ease-in-out forwards;
@@ -126,7 +73,8 @@ main {
 }
 
 article {
-  margin: 10vh 20vh;
+  font-size: 40px;
+  margin: 50px;
 }
 
 article h1 {
@@ -199,7 +147,7 @@ footer .social-links p {
       margin-bottom: 10px;
     }
     article {
-      margin: 5vh 5vh;
+      margin: 10%;
     }
   }
   
@@ -221,7 +169,7 @@ nav {
   height: 100%;
   background-color: #1c1c1c;
   overflow-x: hidden;
-  transition: left 0.3s ease;
+  transition: left 0.4s ease;
   z-index: 999;
   display: flex;
   flex-direction: column;
@@ -240,12 +188,49 @@ nav ul li a {
   color: #b8b8b8;
   padding: 10px 20px;
   text-decoration: none;
-  font-size: 2.5vh;
-  margin: 0 10%;
+  font-size: 20px;
+  margin: 0 5%;
 }
 
 nav ul li a:hover {
   color: #fafafa;
   background-color: #313131;
-  border-radius: 5px; /* Dodaj lekko zaokrąglone rogi */
+  border-radius: 5px;
 } 
+
+/* dropdown button */
+
+/* Add the following CSS rules to your existing CSS file */
+
+.submenu {
+  display: none;
+  list-style-type: none;
+  padding: 0;
+}
+
+.submenu li a {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #868686;
+}
+
+.menu-item .submenu {
+  display: none;
+}
+
+.daily {
+  list-style: none;
+}
+
+article h3 {
+  padding-top: 2%;
+}
+
+article h4 {
+  padding-top: 1%;
+}
+
+article a {
+  text-decoration: none;
+  color: #008970;
+}
