--- a/css/styles.css
+++ b/css/styles.css
@@ -260,14 +260,17 @@ article {
 @media screen and (max-width: 767px) {
   article {
     margin: 0 5%;
-    font-size: 30px;
+    font-size: 20px;
   }
   main {
     padding: 10% 0;
   }
   article h1 {
-    font-size: 2.5vh;
+    font-size: 35px;
     padding-bottom: 2vh;
+  }
+  p {
+    font-size: 25px;
   }
 }
 
